# BE_AI_Integration

./: .env  pyproject.toml
src/: README.md  main.py
src/config/: database.py  db_depend.py  settings.py
src/controllers/: ai_controller.py  home_controller.py  text_summary_controller.py  user_controller.py
src/integrations/: ollama_client.py
src/models/: text_summary_model.py  text_summary_schema.py  user_model.py  user_schema.py
src/repositories/: text_summary_repository.py  user_repository.py
src/scripts/: init_db.py
src/security/: dependency.py  jwt.py
src/services/: ai_service.py  home_service.py  text_summary_service.py  user_service.py
