[project]
name = "test-arrchitecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "mysql>=0.0.3",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymysql>=1.1.2",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
    "passlib>=1.7.4",
    "bcrypt<4.0",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
]
